--- a/Kibbie/makefile
+++ b/Kibbie/makefile
@@ -1,2 +1,9 @@
-all:
-	gcc dynamiclights.c -o tower.out 
+dynamic:
+	gcc dynamiclights.c -o DyTower.out
+static:
+	gcc JordanLights.c -o Jordo.out
+clean:
+	rm *.o
+git:
+	git commit -a -m "auto commit and push done by makefile" 
+	git push
